tests/ui/test-attrs/custom-test-frameworks/issue-107454.stderr
error: cannot test inner items
  --> $DIR/issue-107454.rs:7:5
   |
LL |     #[test_case]
   |     ^^^^^^^^^^^^
   |
note: the lint level is defined here
  --> $DIR/issue-107454.rs:4:9
   |
LL | #![deny(unnameable_test_items)]
   |         ^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

