tests/ui/test-attrs/custom-test-frameworks/issue-107454.rs
// compile-flags: --test

#![feature(custom_test_frameworks)]
#![deny(unnameable_test_items)]

fn foo() {
    #[test_case]
    //~^ ERROR cannot test inner items [unnameable_test_items]
    fn test2() {}
}
